hard-gists/e3b59913d71d82a03eda/run.log
=== Docker Run Log for e3b59913d71d82a03eda ===
Started at: Mi 29. Okt 20:43:43 CET 2025

[2025-10-29 20:43:43] START: Running container for e3b59913d71d82a03eda
[2025-10-29 20:43:43] SUCCESS: Container 5a5918d4c7326f277358fc2f4bf1432eb6f6d5cf11e2de4c2e0f43d1f96c0344 started for e3b59913d71d82a03eda
=== Container logs for e3b59913d71d82a03eda ===
  File "/snippet.py", line 21
    for x in stmt: print x.firstname, x.age
                   ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for e3b59913d71d82a03eda ===
[2025-10-29 20:43:45] INFO: Container 5a5918d4c7326f277358fc2f4bf1432eb6f6d5cf11e2de4c2e0f43d1f96c0344 has stopped
